--- a/app/views/public/pages/cabine_essayage.html.erb
+++ b/app/views/public/pages/cabine_essayage.html.erb
@@ -85,7 +85,7 @@ image2: "https://images.pexels.com/photos/7304211/pexels-photo-7304211.jpeg") %>
             <div class="row g-3">
               <% @cabine_cart.each do |produit| %>
                 <div class="col-12 col-md-6">
-                  <div class="d-flex align-items-center gap-3 p-3">
+                  <div class="d-flex align-items-center gap-3 p-3 border border-dark-subtle rounded bg-light">
                     <!-- Image -->
                     <div style="width: 80px; height: 80px; flex-shrink: 0;">
                       <% if produit.default_image.present? %>
@@ -129,7 +129,7 @@ image2: "https://images.pexels.com/photos/7304211/pexels-photo-7304211.jpeg") %>
           <div class="p-3 text-center"
                data-reservation-form-target="cta">
             <button type="button"
-                    class="btn btn-black btn-lg px-5 rounded-0"
+                    class="btn btn-dark text-light btn-lg px-5 rounded-0"
                     data-bs-toggle="collapse"
                     data-bs-target="#reservationFormCollapse"
                     aria-expanded="false"
