--- a/app/views/public/pages/la_boutique/_section_infos.html.erb
+++ b/app/views/public/pages/la_boutique/_section_infos.html.erb
@@ -1,24 +1,25 @@
+<div class="bg-white text-dark m-0">
 <!-- Section Informations pratiques -->
-<section class="py-5 my-4" data-aos="fade-up" data-aos-duration="800">
+<section class="py-5 mb-0" data-aos="fade-up" data-aos-duration="800">
   <div class="container">
     <div class="row mb-5">
       <div class="col-12 text-center">
-        <h2 class="public-brand-color mb-3" style="font-family: 'Playfair Display', serif; font-size: 2.5rem;">Informations pratiques</h2>
-        <p class="text-light opacity-75" style="font-size: 1.1rem;">Toutes les informations pour nous rendre visite</p>
+        <h2 class="mb-3" style="font-family: 'Playfair Display', serif; font-size: 2.5rem;">Informations pratiques</h2>
+        <p class="opacity-75" style="font-size: 1.1rem;">Toutes les informations pour nous rendre visite</p>
       </div>
     </div>
     
     <div class="row g-4 justify-content-center">
-      <div class="col-12 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
+      <div class="col-12 col-md-6 col-lg-4 d-flex" data-aos="fade-up" data-aos-delay="100">
         <%= info_card(icon: "person-lines-fill", title: "Contacts", content: @texteContact) %>
       </div>
-      <div class="col-12 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
+      <div class="col-12 col-md-6 col-lg-4 d-flex" data-aos="fade-up" data-aos-delay="200">
         <%= info_card(icon: "clock", title: "Horaires", content: @texteHoraire) %>
       </div>
-      <div class="col-12 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="300">
+      <div class="col-12 col-md-6 col-lg-4 d-flex" data-aos="fade-up" data-aos-delay="300">
         <%= info_card(icon: "geo-alt-fill", title: "Adresse", content: @texteAdresse) %>
       </div>
     </div>
   </div>
 </section>
-
+</div>
