--- a/app/views/public/pages/la_boutique/_section_references.html.erb
+++ b/app/views/public/pages/la_boutique/_section_references.html.erb
@@ -3,7 +3,7 @@
   <div class="container-fluid">
     <div class="row mb-5">
       <div class="col-12 text-center">
-        <h2 class="public-brand-color mb-3" style="font-family: 'Playfair Display', serif; font-size: 2.5rem;">Ils nous font confiance</h2>
+        <h2 class="text-light mb-3" style="font-family: 'Playfair Display', serif; font-size: 2.5rem;">Ils nous font confiance</h2>
         <p class="text-light opacity-75" style="font-size: 1.1rem;">Des établissements prestigieux nous font confiance</p>
       </div>
     </div>
