adding contact message to send mails to admin

--- a/app/views/public/pages/accueil_bis/_section_hero.html.erb
+++ b/app/views/public/pages/accueil_bis/_section_hero.html.erb
@@ -27,7 +27,7 @@
       subtitle: "Sous-titre de la troisième slide",
       right_text: "Texte à droite au-dessus du bouton",
       button_text: "Nous contacter",
-      button_url: contact_path
+      button_url: "#{contact_path}#message-form"
     }
   ]
 %>
