--- a/app/views/public/pages/faq.html.erb
+++ b/app/views/public/pages/faq.html.erb
@@ -292,7 +292,7 @@ image2: "https://images.pexels.com/photos/22678539/pexels-photo-22678539.jpeg") 
               nous serons ravis de répondre à toutes vos questions.
             </p>
             <div class="d-flex gap-3 justify-content-center flex-wrap">
-            <%= link_to contact_path, class: "btn btn-lg px-4 shadow-sm btn-smoke-hover" do %>
+            <%= link_to "#{contact_path}#message-form", class: "btn btn-lg px-4 shadow-sm btn-smoke-hover" do %>
                 <i class="bi bi-envelope me-2"></i>Nous contacter
               <% end %>
               <a href="tel:+33000000000" class="btn btn-outline-light btn-lg px-5">
