--- a/app/views/public/pages/legal.html.erb
+++ b/app/views/public/pages/legal.html.erb
@@ -371,7 +371,7 @@ image2: "https://images.pexels.com/photos/23500968/pexels-photo-23500968.jpeg") 
               Pour toute question concernant ces conditions ou pour toute réclamation, 
               n'hésitez pas à nous contacter.
             </p>
-            <%= link_to contact_path, class: "btn btn-brand btn-lg px-5" do %>
+            <%= link_to "#{contact_path}#message-form", class: "btn btn-brand btn-lg px-5" do %>
               <i class="bi bi-envelope me-2"></i>Nous contacter
             <% end %>
             
