--- a/app/views/public/shared/_floating_contact_icons.html.erb
+++ b/app/views/public/shared/_floating_contact_icons.html.erb
@@ -3,7 +3,7 @@
     <i class="bi bi-calendar-check"></i>
   <% end %>
   
-  <%= link_to "mailto:contact@a1soir.fr", class: "floating-icon-btn", title: "Nous écrire" do %>
+  <%= link_to "#{contact_path}#contact-form-section", class: "floating-icon-btn", title: "Nous écrire" do %>
     <i class="bi bi-envelope"></i>
   <% end %>
   
